# cortexOS

./: .gitignore  AGENTS.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  CREATING_ISSUES.md  Cargo.toml  DELIVERY_SUMMARY.md  HOW_TO_CREATE_PRS.md  INDEX.md  ISSUES_SUMMARY.md  MILESTONE_0.1_ISSUES.md  PLAN_README.md  PR_BREAKDOWN.md  QUICK_REF.md  QUICK_START_ISSUES.md  README.md  ROADMAP.md  SUMMARY.md  WASM_BUILD.md  WASM_COMPLETION_SUMMARY.md  WASM_CONFIG.md  WORK_PLAN.md
.cargo/: config.toml
.github/: CI_CD_SUMMARY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: pr-task.md
.github/workflows/: ci.yml  release.yml  wasi-build.yml
apps/: launcher.sh
apps/desktop/: Cargo.toml  index.html
apps/desktop/src/: main.rs  peer.rs  peer_manager.rs  state.rs
apps/ios/: README.md  build.sh
apps/ios/CortexOS/: ContentView.swift  CortexBridge.swift  CortexOSApp.swift  cortex.h
apps/ios/cortex-ios/: Cargo.toml
apps/ios/cortex-ios/src/: lib.rs
crates/agent/: Cargo.toml
crates/agent/src/: context.rs  error.rs  intention.rs  lib.rs  lifecycle.rs  traits.rs  types.rs
crates/agent/src/builtin/: compiler.rs  heartbeat.rs  logger.rs  mod.rs  planner.rs  relay.rs
crates/agent/tests/: compiler_integration.rs
crates/core/: Cargo.toml  PERFORMANCE.md  README.md
crates/core/benches/: backpressure_bench.rs  event_bench.rs  event_throughput.rs
crates/core/docs/: BACKPRESSURE.md  WASI_BUILD.md
crates/core/src/: backpressure.rs  capability.rs  device.rs  error.rs  event.rs  id.rs  lib.rs  runtime.rs  task_queue.rs  work_distributor.rs
crates/grid/: Cargo.toml  PR7_COMPLETE.md  SECURITY.md
crates/grid/benches/: handshake_benchmark.rs
crates/grid/src/: chunk_sync.rs  discovery.rs  error.rs  handshake.rs  lib.rs  metrics.rs  orchestrator.rs  peer.rs  pipeline.rs  relay.rs  task_queue.rs  wire.rs
crates/inference/: Cargo.toml
crates/inference/src/: distributed_executor.rs  error.rs  lib.rs  model.rs  sharded_model.rs  skill.rs  tensor_transport.rs
crates/ios-ffi/: Cargo.toml  cortex.udl
crates/ios-ffi/src/: lib 2.rs  lib.rs
crates/lang/: Cargo.toml
crates/lang/src/: ast.rs  compiler.rs  error.rs  lexer.rs  lib.rs  parser.rs  vm.rs
crates/node/: Cargo.toml
crates/node/src/: capabilities.rs  config.rs  main.rs  network.rs  task_server.rs
crates/peer/: Cargo.toml
crates/peer/src/: chat.rs  main.rs  ui.html  ui.rs
crates/reputation/: Cargo.toml
crates/reputation/src/: error.rs  gossip.rs  lib.rs  rating.rs  trust.rs
crates/sensor/: Cargo.toml
crates/sensor/src/: ble.rs  driver.rs  error.rs  event.rs  mock.rs  traits.rs
crates/signal/: Cargo.toml
crates/signal/src/: ble_emitter.rs  ble_receiver.rs  codebook.rs  emitter.rs  error.rs  evolution.rs  forwarder.rs  learning.rs  lib.rs  negotiation.rs  receiver.rs  recognition.rs  routing.rs  signal.rs
crates/skill/: Cargo.toml  DELEGATION.md
crates/skill/src/: definition.rs  delegation.rs  error.rs  executor.rs  lib.rs  registry.rs  router.rs  task.rs
crates/skill/tests/: delegation_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: chunk_store.rs  error.rs  event_store.rs  graph.rs  graph_store.rs  lib.rs  privacy.rs  sync.rs  types.rs
crates/webui/: Cargo 2.toml  Cargo.toml
crates/webui/src/: api.rs  dashboard.rs  distributed.rs  logs.rs  main.rs  swarm.rs
crates/webui/static/: admin.html  docs.html  index.html  manifest.json
docs/: ERROR_HANDLING.md  event-chunk-sync.md
examples/ble-signal/: Cargo.toml  README.md  SECURITY.md
examples/ble-signal/src/: ble_emit.rs  ble_receive.rs
examples/chunk-sync/: Cargo.toml  README.md
examples/chunk-sync/src/: main.rs
examples/compiler-demo/: Cargo.toml  README.md
examples/compiler-demo/src/: main.rs
examples/distributed-compilation/: Cargo.toml  README.md
examples/distributed-compilation/src/: main.rs
examples/distributed-tasks/: Cargo 2.toml
examples/distributed-tasks/src/: main.rs
examples/heartbeat/: Cargo.toml
examples/heartbeat/src/: main.rs
examples/ios-app/: DEPLOY.md  Makefile  build-and-deploy.sh  build-ios.sh  configure-xcode.sh  create-app.sh  create-xcode-project.sh  deploy.sh  gen-xcode.swift  setup-xcode.sh
examples/ios-app/ios/CortexOS/: SETUP.md
examples/ios-app/ios/CortexOS/CortexOS/: ContentView.swift  CortexBridge.swift  CortexOS-Bridging-Header.h  CortexOSApp.swift  Info.plist
examples/ios-app/ios/CortexOS/CortexOS.xcodeproj/: project.pbxproj
examples/ios-app/ios/CortexOS/CortexOS.xcodeproj/project.xcworkspace/xcuserdata/renansimoes.xcuserdatad/: UserInterfaceState.xcuserstate
examples/ios-app/ios/CortexOS/CortexOS.xcodeproj/xcuserdata/renansimoes.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/llm-inference/: Cargo.toml  IMPLEMENTATION.md  README.md
examples/llm-inference/src/: main.rs
examples/multi-hop-demo/: Cargo.toml  README.md
examples/multi-hop-demo/benches/: routing_performance.rs
examples/multi-hop-demo/src/: main.rs
examples/planner-demo/: Cargo.toml  README.md  main.rs
examples/relay-demo/: Cargo.toml
examples/relay-demo/src/: main.rs
examples/secure-handshake/: Cargo.toml
examples/secure-handshake/src/: main.rs
examples/signal-evolution/: Cargo.toml  README.md  main.rs
examples/skill-network/: Cargo.toml
examples/skill-network/src/: main.rs
examples/wasm-demo/: Cargo.toml
examples/wasm-demo/src/: lib.rs  main.rs
scripts/: build-all.sh
tools/: README.md  benchmark_wasm.sh  broadcast_listener.py  create-issues.py  create-pr-issues.sh  create-tasklist-issues.sh  discovery_listener.py  pr-definitions.json  test_sender.py
