[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/grid",
    "crates/signal",
    "crates/sensor",
    "crates/agent",
    "crates/lang",
    "crates/storage",
    "examples/heartbeat",
    "examples/relay-demo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/therenansimoes/cortexOS"

[workspace.dependencies]
# Pin problematic transitive deps
base64ct = "=1.7.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Crypto
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake3 = "1.5"
rand = "0.8"

# Networking
libp2p = { version = "0.53", features = ["tokio", "mdns", "kad", "noise", "yamux", "tcp", "macros", "identify"] }

# Storage
rocksdb = "0.22"

# Utils
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
parking_lot = "0.12"
dashmap = "5.5"
async-trait = "0.1"
futures = "0.3"

# WASM compatibility
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # Optimize for size (important for WASM)
