[package]
name = "cortex-app"
version = "0.1.0"
edition = "2021"
description = "CortexOS Desktop App - Distributed AI P2P Client"

[[bin]]
name = "cortex-app"
path = "src/main.rs"

[dependencies]
# GUI
iced = { version = "0.12", features = ["tokio", "debug", "advanced"] }

# CortexOS
cortex-core = { path = "../../crates/core" }
cortex-grid = { path = "../../crates/grid" }
cortex-inference = { path = "../../crates/inference" }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net", "io-util", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# Utils
blake3 = "1.5"
rand = "0.8"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Model Management
hf-hub = "0.3"
tokenizers = "0.20"
