[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true

[features]
default = ["native"]
native = []
wasm = []

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.35", default-features = false, features = ["sync", "macros", "io-util", "rt", "time"] }
getrandom = { workspace = true }

[[bench]]
name = "event_bench"
harness = false

[[bench]]
name = "backpressure_bench"
harness = false
