[package]
name = "cortex-ios-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
cortex-core = { path = "../core" }
cortex-agent = { path = "../agent" }
cortex-grid = { path = "../grid" }
cortex-storage = { path = "../storage" }
cortex-reputation = { path = "../reputation" }
cortex-skill = { path = "../skill" }

tokio = { version = "1.35", features = ["macros", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"

[target.'cfg(not(target_os = "ios"))'.dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
