[package]
name = "cortex-peer"
version.workspace = true
edition.workspace = true
description = "CortexOS distributed AI peer - runs on any device"

[[bin]]
name = "cortex-peer"
path = "src/main.rs"

[dependencies]
cortex-core = { path = "../core" }
cortex-grid = { path = "../grid" }
cortex-inference = { path = "../inference" }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"

# Networking
socket2 = "0.5"

# Crypto
blake3 = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utils
thiserror = { workspace = true }
uuid = { workspace = true }

# Web UI
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }

