[package]
name = "cortex-reputation"
version.workspace = true
edition.workspace = true
description = "Decentralized P2P reputation system for skill-based trust"

[dependencies]
cortex-core = { path = "../core" }
cortex-grid = { path = "../grid" }
serde = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
