[package]
name = "cortex-signal"
version.workspace = true
edition.workspace = true

[dependencies]
cortex-core = { path = "../core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Random number generation for evolution
rand = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
