[package]
name = "cortex-skill"
version.workspace = true
edition.workspace = true
description = "Skill framework for specialized AI agents"

[dependencies]
cortex-core = { path = "../core" }
cortex-grid = { path = "../grid" }
cortex-reputation = { path = "../reputation" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
