[package]
name = "cortex-storage"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
parking_lot = "0.12"
blake3 = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocksdb = "0.22"
