[package]
name = "compiler-demo"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
cortex-agent = { path = "../../crates/agent" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
