[package]
name = "example-multi-hop"
version.workspace = true
edition.workspace = true

[[bin]]
name = "multi-hop"
path = "src/main.rs"

[dependencies]
cortex-core = { path = "../../crates/core" }
cortex-signal = { path = "../../crates/signal" }
cortex-grid = { path = "../../crates/grid" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
