[package]
name = "planner-demo"
version.workspace = true
edition.workspace = true

[[bin]]
name = "planner-demo"
path = "main.rs"

[dependencies]
cortex-agent = { path = "../../crates/agent" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
